{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 456,
  "lineage": "9a1a5ede-3859-32cc-97e3-cafc78438ae8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725589148:security-group/sg-00f71f04dba4d4f75",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f71f04dba4d4f75",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d651b091c390b286"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "uit-go-dev-rds-sg-2",
            "name_prefix": "",
            "owner_id": "851725589148",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            },
            "tags_all": {
              "Env": "dev",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5369c4050a57dea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_tasks",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725589148:security-group/sg-0d651b091c390b286",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d651b091c390b286",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-065472784387386fe"
                ],
                "self": false,
                "to_port": 3999
              }
            ],
            "name": "uit-go-dev-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "851725589148",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            },
            "tags_all": {
              "Env": "dev",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5369c4050a57dea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725589148:security-group/sg-00c21c9a37dc44510",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c21c9a37dc44510",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d651b091c390b286"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "uit-go-dev-redis-sg",
            "name_prefix": "",
            "owner_id": "851725589148",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            },
            "tags_all": {
              "Env": "dev",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5369c4050a57dea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_tasks",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725589148:network-acl/acl-0b26545a94aa78dad",
            "default_network_acl_id": "acl-0b26545a94aa78dad",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b26545a94aa78dad",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "851725589148",
            "subnet_ids": [
              "subnet-028a731185b9bb9ae",
              "subnet-038cd4d89ddd8e81f",
              "subnet-04ec9412a3d18a774",
              "subnet-0b51e2af10937ad3d"
            ],
            "tags": {
              "Env": "dev",
              "Name": "uit-go-dev-vpc-default",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "uit-go-dev-vpc-default",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            },
            "vpc_id": "vpc-0d5369c4050a57dea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725589148:route-table/rtb-073300a3787940f58",
            "default_route_table_id": "rtb-073300a3787940f58",
            "id": "rtb-073300a3787940f58",
            "owner_id": "851725589148",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "uit-go-dev-vpc-default",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "uit-go-dev-vpc-default",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0d5369c4050a57dea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725589148:security-group/sg-0dafaccd759476b76",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0dafaccd759476b76",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "851725589148",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Name": "uit-go-dev-vpc-default",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "uit-go-dev-vpc-default",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            },
            "vpc_id": "vpc-0d5369c4050a57dea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d311e349f98c5a70",
            "arn": "arn:aws:ec2:ap-southeast-1:851725589148:elastic-ip/eipalloc-0d311e349f98c5a70",
            "association_id": "eipassoc-03c5f9c1b38774b8c",
            "domain": "vpc",
            "id": "eipalloc-0d311e349f98c5a70",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-04ddd7f953dc9502f",
            "private_dns": "ip-10-20-4-62.ap-southeast-1.compute.internal",
            "private_ip": "10.20.4.62",
            "public_dns": "ec2-47-130-125-108.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "47.130.125.108",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "dev",
              "Name": "uit-go-dev-vpc-ap-southeast-1a",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "uit-go-dev-vpc-ap-southeast-1a",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725589148:internet-gateway/igw-0e4735341170f3e9a",
            "id": "igw-0e4735341170f3e9a",
            "owner_id": "851725589148",
            "tags": {
              "Env": "dev",
              "Name": "uit-go-dev-vpc",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "uit-go-dev-vpc",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            },
            "vpc_id": "vpc-0d5369c4050a57dea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d311e349f98c5a70",
            "association_id": "eipassoc-03c5f9c1b38774b8c",
            "connectivity_type": "public",
            "id": "nat-097375c3806f4a9b8",
            "network_interface_id": "eni-04ddd7f953dc9502f",
            "private_ip": "10.20.4.62",
            "public_ip": "47.130.125.108",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-038cd4d89ddd8e81f",
            "tags": {
              "Env": "dev",
              "Name": "uit-go-dev-vpc-ap-southeast-1a",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "uit-go-dev-vpc-ap-southeast-1a",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ac232093d3a168c21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-097375c3806f4a9b8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ac232093d3a168c2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e4735341170f3e9a",
            "id": "r-rtb-013cb5290e293b5001080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-013cb5290e293b500",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725589148:route-table/rtb-0ac232093d3a168c2",
            "id": "rtb-0ac232093d3a168c2",
            "owner_id": "851725589148",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-097375c3806f4a9b8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "uit-go-dev-vpc-private",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "uit-go-dev-vpc-private",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5369c4050a57dea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725589148:route-table/rtb-013cb5290e293b500",
            "id": "rtb-013cb5290e293b500",
            "owner_id": "851725589148",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e4735341170f3e9a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "uit-go-dev-vpc-public",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "uit-go-dev-vpc-public",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d5369c4050a57dea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cb02864f8993f5fd",
            "route_table_id": "rtb-0ac232093d3a168c2",
            "subnet_id": "subnet-0b51e2af10937ad3d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bf6e56f608e8690",
            "route_table_id": "rtb-0ac232093d3a168c2",
            "subnet_id": "subnet-04ec9412a3d18a774"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd40c2b91de4c1d9",
            "route_table_id": "rtb-013cb5290e293b500",
            "subnet_id": "subnet-038cd4d89ddd8e81f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5ef58893edee103",
            "route_table_id": "rtb-013cb5290e293b500",
            "subnet_id": "subnet-028a731185b9bb9ae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725589148:subnet/subnet-0b51e2af10937ad3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.20.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b51e2af10937ad3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725589148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "uit-go-dev-vpc-private-ap-southeast-1a",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "uit-go-dev-vpc-private-ap-southeast-1a",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            },
            "vpc_id": "vpc-0d5369c4050a57dea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725589148:subnet/subnet-04ec9412a3d18a774",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.20.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ec9412a3d18a774",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725589148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "uit-go-dev-vpc-private-ap-southeast-1b",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "uit-go-dev-vpc-private-ap-southeast-1b",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            },
            "vpc_id": "vpc-0d5369c4050a57dea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725589148:subnet/subnet-038cd4d89ddd8e81f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.20.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038cd4d89ddd8e81f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725589148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "uit-go-dev-vpc-public-ap-southeast-1a",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "uit-go-dev-vpc-public-ap-southeast-1a",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            },
            "vpc_id": "vpc-0d5369c4050a57dea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725589148:subnet/subnet-028a731185b9bb9ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.20.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028a731185b9bb9ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725589148",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "uit-go-dev-vpc-public-ap-southeast-1b",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "uit-go-dev-vpc-public-ap-southeast-1b",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            },
            "vpc_id": "vpc-0d5369c4050a57dea"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:851725589148:vpc/vpc-0d5369c4050a57dea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0b26545a94aa78dad",
            "default_route_table_id": "rtb-073300a3787940f58",
            "default_security_group_id": "sg-0dafaccd759476b76",
            "dhcp_options_id": "dopt-01808d4b7f4128f1b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d5369c4050a57dea",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-073300a3787940f58",
            "owner_id": "851725589148",
            "tags": {
              "Env": "dev",
              "Name": "uit-go-dev-vpc",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "uit-go-dev-vpc",
              "Owner": "se360-uit-go",
              "Project": "uit-go"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}